fix drag/drop arrows not showing for IE10 on "Questions" tab
Fixes an issue where drag/drop arrows were not showing on the
"Questions" tab. For some reason, the "group_top" selector has been lost
in the original ERB markup, so due to some weird CSS selectors, the
icons didn't show up in IE10 only.

Test plan:
  - Visit the quiz edit page in all the browsers!
  - You should see the edit/trash/move icons when hovering over
    questions on the "Questions" tab.
  - You should not see those icons unless you are hovering.

fixes CNVS-11419

Reviewed-on: https://gerrit.instructure.com/31021
QA-Review: Myller de Araujo <myller@instructure.com>
Tested-by: Jenkins <jenkins@instructure.com>
Product-Review: Stanley Stuart <stanley@instructure.com>

--- a/app/stylesheets/quizzes.sass
+++ b/app/stylesheets/quizzes.sass
@@ -1719,3 +1719,12 @@ ul#quiz_versions
       font-size: 15px
   span.field + span.field
     margin-left: 0
+
+// Fix for IE10 not showing hover icons for drag/drop when hovering over
+// questions on the "Questions" tab.
+.hover
+  .move .move_icon
+    display: inline
+    cursor: move
+  .links a
+    left: 0
